Set minimum width to avoid too narrow autocomplete

--- a/content-scripts/autocomplete.css
+++ b/content-scripts/autocomplete.css
@@ -2,6 +2,7 @@
     overflow: hidden;
     margin: 0 !important;
     z-index: 999999999;
+    min-width: 200px;
 }
 .ui-menu.ui-widget.ui-widget-content.ui-autocomplete.simple-form-fill .ui-menu-item {
     padding: 0 !important;
